--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,14 +2,15 @@ name: Docker Build
 
 on:
   workflow_call:
+    inputs:
+      version:
+        description: "Release version to build and push (e.g. 1.0.0). When set, image is pushed."
+        required: false
+        type: string
     secrets:
       DOCKERHUB_PASSWORD:
         description: "The Docker Hub password"
         required: true
-
-  push:
-    tags:
-      - "v*"
 
 permissions:
   contents: read
@@ -22,6 +23,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.version || github.ref }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -36,7 +39,7 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-          version: ${{ github.ref_name }}
+          version: ${{ inputs.version || github.ref_name }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -50,4 +53,4 @@ jobs:
           context: .
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          push: ${{ github.ref_type == 'tag' }}
+          push: ${{ startsWith(inputs.version, 'v') }}
