--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,13 +33,13 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
+          context: git
           images: |
             playerdata/numaflow-mqtt-source
           tags: |
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-          version: ${{ inputs.version || github.ref_name }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
