--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,4 +53,5 @@ jobs:
           context: .
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
           push: ${{ inputs.version != null }}
